--- a/autotrain_with_llm/ui/templates/test_model.html
+++ b/autotrain_with_llm/ui/templates/test_model.html
@@ -29,7 +29,14 @@
           <p class="choose-file">Escolher arquivo</p>
           <p class="format-available">Formato JPG, PNG</p>
         </div>
-        <input class="input-file" type="file" accept="image/png, image/jpeg, image/jpg" id="train-dataset-upload-section set-to-not-required" name="file_training"/>
+        <input 
+          class="input-file" 
+          type="file" 
+          accept="image/png, image/jpeg, image/jpg" 
+          id="train-dataset-upload-section set-to-not-required" 
+          name="file_training"
+          showImage
+        />
       </label>
       <div class="btns">
         <button id="download-model" class="btn btn-primary">Download Model</button>
