--- a/autotrain_with_llm/ui/statics/styles/form.css
+++ b/autotrain_with_llm/ui/statics/styles/form.css
@@ -24,7 +24,7 @@
     display: block;
 }
 
-.label-dataset-config{
+label{
     text-align: start;
     justify-content: flex-start;
     display: flex;
@@ -67,6 +67,11 @@ code {
     flex-direction: column;
 }
 
+#config-help:hover{
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 50%;
+}
+
 
 /* DATASET CONFIG DIALOG */
 
@@ -77,6 +82,7 @@ code {
     padding: 20px;
     background-color: #f9f9f9;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    margin: auto;
 }
 #datasetDialog::backdrop {
     background-color: rgba(0, 0, 0, 0.5);
@@ -123,6 +129,8 @@ code {
     background-color: #0056b3;
 }
 
+
+
 /* SOURCE CODE DIALOF */
 
 #codeDialog {
@@ -135,6 +143,7 @@ code {
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     overflow: hidden;
     position: relative;
+    margin: auto;
 }
 
 #codeDialog::backdrop {
@@ -188,3 +197,194 @@ h2 {
     max-height: 50vh; /* Limita a altura para rolagem */
     line-height: 1.5;
 }
+
+
+
+/* ALBUM */
+
+.training-dataset, .validation-dataset{
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+}
+
+.image-content {
+    width: 100%;
+}
+
+/* Container principal */
+.container {
+    display: flex;
+    /* justify-content: center; */
+    /* align-items: center; */
+    gap: 10px;
+    flex-wrap: wrap;
+    margin: 0;
+    flex-direction: column;
+    padding: 0;
+}
+
+/* Estilo dos cards de imagem */
+.image-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 150px;
+    cursor: pointer;
+}
+
+.image-card img {
+    width: 100%;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+/* Estilo do badge no canto superior direito */
+.badge {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    background-color: #E0EDFF;
+    color: #2196F3;
+    font-size: 14px;
+    font-weight: bold;
+    border-radius: 5px;
+    padding: 2px 6px;
+}
+
+/* Legenda abaixo da imagem */
+.caption {
+    margin-top: 8px;
+    font-size: 14px;
+    font-weight: bold;
+    text-align: center;
+}
+
+/* Posicionamento do badge no container */
+.image-wrapper {
+    position: relative;
+    width: 100%;
+    height: auto;
+}
+
+
+
+/* DIALOG ALBUM */
+
+/* Estilização do diálogo */
+#image-dialog, #dialog-create-category {
+    width: 80%;
+    max-width: 900px;
+    height: 70vh;
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    padding: 20px;
+    position: relative;
+    font-family: Arial, sans-serif;
+    align-self: center;
+    justify-self: center;
+    overflow: hidden;
+}
+
+/* Cabeçalho do diálogo */
+.dialog-header {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 15px;
+}
+
+/* Título */
+.dialog-header h2 {
+    font-size: 20px;
+    font-weight: bold;
+    margin: 0;
+    display: flex;
+    align-items: center;
+}
+
+/* Label de quantidade de imagens */
+.dialog-header .image-count {
+    font-size: 14px;
+    color: #666;
+    margin-top: 5px;
+}
+
+/* Botão de fechar */
+.close-button {
+    background: none;
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
+    position: absolute;
+    top: 15px;
+    right: 15px;
+}
+
+/* Botão de voltar */
+.back-button {
+    background: none;
+    border: none;
+    font-size: 18px;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+/* Grade de imagens no diálogo */
+.image-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+    gap: 10px;
+    overflow: auto;
+    height: 70%;
+}
+
+.image-grid img {
+    width: 100%;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.dialog-content {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    height: 100%;
+}
+
+.content-to-import {
+    display: flex;
+    gap: 10px;
+    height: 100%;
+}
+
+.album-item {
+    position: relative;
+}
+
+
+.delete-icon {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    width: 20px;
+    height: 20px;
+    background: rgba(0, 0, 0, 0.7);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 14px;
+    cursor: pointer;
+    opacity: 0;
+    transition: opacity 0.3s;
+  }
+  .album-item:hover .delete-icon {
+    opacity: 1;
+  }
+
+  .manual-section{
+      margin-top: 20px;
+  }
