--- a/autotrain_with_llm/ui/statics/styles/test_model.css
+++ b/autotrain_with_llm/ui/statics/styles/test_model.css
@@ -104,6 +104,7 @@
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     background-color: #ffffff;
+    margin: auto;
 }
 
 dialog h2 {
