--- a/autotrain_with_llm/ui/templates/test_model.html
+++ b/autotrain_with_llm/ui/templates/test_model.html
@@ -46,13 +46,18 @@
     <div class="result-container">
       <div class="compatibilidade">
         <div id="bars">
-          <!-- <div class="title">Compatibilidade</div> -->
-          <!-- <div class="bar-container">
-            <div class="label" style="color: #008000;">Glioma</div>
-            <div class="bar">
-              <div class="bar-fill glioma" style="width: 20%;"></div>
+          <!-- <div class="title">Compatibilidade</div>
+          <div id="predict-result">
+            <img id="image-predicted" src="https://www.neurodrgustavonoleto.com/wp-content/uploads/2022/01/unnamed-1.jpg" alt="">
+            <div id="catogories">
+              <div class="bar-container">
+                <div class="label">Category Model</div>
+                <div class="bar">
+                  <div class="bar-fill glioma" style="width: 20%;"></div>
+                </div>
+                <div class="percentage">25%</div>
+              </div>
             </div>
-            <div class="percentage">25%</div>
           </div> -->
         </div> 
       </div>
