Fixed bug when configuring a dataset for the first time

--- a/autotrain_with_llm/ui/templates/form.html
+++ b/autotrain_with_llm/ui/templates/form.html
@@ -134,10 +134,10 @@
     <!-- Input para o caminho absoluto -->
     <div id="dataset-path" class="section-config-mode" style="display:none;">
         <label for="trainDatasetPath">Caminho do Dataset de Treinamento:</label>
-        <input type="text" id="train-dataset-path" name="train_dataset_path" class="form-control set-to-not-required" placeholder="Caminho absoluto do dataset de treinamento" value="C:\Development\Faculdade\TCC\Utilitários\Datasets\Tumores\train">
+        <input type="text" id="train-dataset-path" name="train_dataset_path" class="form-control set-to-not-required" placeholder="Caminho absoluto do dataset de treinamento">
         <br>
         <label for="valDatasetPath">Caminho do Dataset de Validação:</label>
-        <input type="text" id="valid-dataset-path" name="valid_dataset_path" class="form-control set-to-not-required" placeholder="Caminho absoluto do dataset de validação" value="C:\Development\Faculdade\TCC\Utilitários\Datasets\Tumores\test">
+        <input type="text" id="valid-dataset-path" name="valid_dataset_path" class="form-control set-to-not-required" placeholder="Caminho absoluto do dataset de validação">
     </div>
 
     <div class="col-12">
